# nuix

./: pyproject.toml
src/nuix/: __init__.py  bubble_edit.py  framing.py  lineedit.py
tests/: test_bubble_edit.py  test_line_edits.py
